--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+backports.zoneinfo==0.2.1
 Django==4.2.1
+django-cors-headers==4.0.0
 django-dotenv==1.4.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -7,3 +9,4 @@ mysqlclient==2.1.1
 PyJWT==2.7.0
 pytz==2023.3
 sqlparse==0.4.4
+tzdata==2023.3
