--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.6.0
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
+cryptography==40.0.2
+defusedxml==0.7.1
+dj-rest-auth==4.0.1
 Django==4.2.1
+django-allauth==0.54.0
 django-cors-headers==4.0.0
 django-dotenv==1.4.2
 djangorestframework==3.14.0
@@ -9,10 +14,15 @@ djangorestframework-simplejwt==5.2.2
 idna==3.4
 install==1.3.5
 mysqlclient==2.1.1
+oauthlib==3.2.2
+pycparser==2.21
 PyJWT==2.7.0
 PyMySQL==1.0.3
+python3-openid==3.2.0
 pytz==2023.3
 requests==2.31.0
+requests-oauthlib==1.3.1
+slacker==0.14.0
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.2
