--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ cryptography==40.0.2
 Django==4.2.1
 django-cors-headers==4.0.0
 django-dotenv==1.4.2
+django-webpush==0.3.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 Faker==18.9.0
 hiredis==2.2.3
+http-ece==1.1.0
 hyperlink==21.0.0
 idna==3.4
 incremental==22.10.0
@@ -23,10 +25,13 @@ msgpack==0.5.6
 msgpack-python==0.5.6
 mysqlclient==2.1.1
 notification==0.2.1
+Pillow==9.5.0
+py-vapid==1.9.0
 pycparser==2.21
 PyJWT==2.7.0
 python-dateutil==2.8.2
 pytz==2023.3
+pywebpush==1.9.4
 requests==2.30.0
 six==1.16.0
 slacker==0.14.0
@@ -34,6 +39,6 @@ sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
 typing_extensions==4.6.0
+tzdata==2023.3
 urllib3==2.0.2
 zope.interface==6.0
-tzdata==2023.3
