--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.6.0
+attrs==23.1.0
+Automat==22.10.0
+autopep8==2.0.2
 certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+constantly==15.1.0
 cryptography==40.0.2
 defusedxml==0.7.1
 dj-rest-auth==4.0.1
@@ -17,24 +21,29 @@ hiredis==2.2.3
 http-ece==1.1.0
 hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 install==1.3.5
 mysqlclient==2.1.1
-oauthlib==3.2.2
 notification==0.2.1
+oauthlib==3.2.2
 Pillow==9.5.0
 py-vapid==1.9.0
+pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.7.0
 PyMySQL==1.0.3
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3
+pywebpush==1.9.4
 requests==2.30.0
 requests-oauthlib==1.3.1
-pywebpush==1.9.4
 six==1.16.0
 slacker==0.14.0
 sqlparse==0.4.4
+tomli==2.0.1
 Twisted==22.10.0
+twisted-iocpsupport==1.0.3
 txaio==23.1.1
 typing_extensions==4.6.0
 tzdata==2023.3
