--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
 asgihandler==0.4.1
 asgiref==3.6.0
-brotlipy==0.7.0
-certifi @ file:///C:/b/abs_4a0polqwty/croot/certifi_1683875377622/work/certifi
-cffi @ file:///C:/b/abs_49n3v2hyhr/croot/cffi_1670423218144/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-clip @ git+https://github.com/openai/CLIP.git@a9b1bf5920416aaeaec965c25dd9e8f98c864f16
-colorama==0.4.6
-cryptography @ file:///C:/b/abs_8ecplyc3n2/croot/cryptography_1677533105000/work
 attrs==23.1.0
 Automat==22.10.0
 autopep8==2.0.2
@@ -19,7 +12,6 @@ constantly==15.1.0
 cryptography==40.0.2
 defusedxml==0.7.1
 dj-rest-auth==4.0.1
->>>>>>> 8b93e8b43ac03deda6eae260bbb3a0a8c08eaf89
 Django==4.2.1
 django-allauth==0.51.0
 django-cors-headers==4.0.0
@@ -27,36 +19,6 @@ django-dotenv==1.4.2
 django-webpush==0.3.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-filelock @ file:///C:/b/abs_c7yrhs9uz2/croot/filelock_1672387617533/work
-ftfy==6.1.1
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-MarkupSafe @ file:///C:/ci/markupsafe_1654508036328/work
-mkl-fft==1.3.6
-mkl-random @ file:///C:/Users/dev-admin/mkl/mkl_random_1682977971003/work
-mkl-service==2.4.0
-mpmath==1.2.1
-networkx @ file:///C:/b/abs_b935xy_9g6/croot/networkx_1678964342510/work
-numpy @ file:///C:/Users/dev-admin/mkl/numpy_and_numpy_base_1682982345978/work
-Pillow==9.4.0
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-PyJWT==2.7.0
-pyOpenSSL @ file:///C:/b/abs_552w85x1jz/croot/pyopenssl_1677607703691/work
-PySocks @ file:///C:/ci_310/pysocks_1642089375450/work
-pytz==2023.3
-regex==2023.5.5
-requests @ file:///C:/b/abs_41owkd5ymz/croot/requests_1682607524657/work
-sqlparse==0.4.4
-sympy @ file:///C:/b/abs_95fbf1z7n6/croot/sympy_1668202411612/work
-torch==2.0.1
-torchaudio==2.0.2
-torchvision==0.15.2
-tqdm==4.65.0
-typing_extensions @ file:///C:/b/abs_a1bb332wcs/croot/typing_extensions_1681939523095/work
-tzdata==2023.3
-urllib3 @ file:///C:/b/abs_3ce53vrdcr/croot/urllib3_1680254693505/work
-wcwidth==0.2.6
-win-inet-pton @ file:///C:/ci_310/win_inet_pton_1642658466512/work
 Faker==18.9.0
 hiredis==2.2.3
 http-ece==1.1.0
@@ -92,3 +54,6 @@ typing_extensions==4.6.0
 tzdata==2023.3
 urllib3==2.0.2
 zope.interface==6.0
+
+
+## conda install pytorch torchvision torchaudio cpuonly -c pytorch
