--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 Faker==18.9.0
 idna==3.4
+mysqlclient==2.1.1
 oauthlib==3.2.2
 Pillow==9.5.0
 pycparser==2.21
@@ -27,4 +28,5 @@ six==1.16.0
 slacker==0.14.0
 sqlparse==0.4.4
 typing_extensions==4.6.2
+tzdata==2023.3
 urllib3==2.0.2
